--- a/app/assets/stylesheets/_nav_drawer.scss
+++ b/app/assets/stylesheets/_nav_drawer.scss
@@ -4,11 +4,14 @@ $drawer-side-padding: 1rem;
   position: static;
 }
 
+nav{
+  overflow-x: hidden;
+}
+
 .drawer-container{
   transition: all .5s ease-in-out;
   transform: translateX(0%);
   padding: 5rem $drawer-side-padding 0;
-  overflow-x: hidden;
   &.drawer-open{
     transform: translateX(-100%);
   }
